--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>NBA Quiz</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div id="quiz-container" class="hide">
+            <div id="question">Question</div>
+            <div id="answer-buttons" class="btn-grid">
+                <button class="btn"> Answer 1</button>
+                <button class="btn"> Answer 2</button>
+                <button class="btn"> Answer 3</button>
+                <button class="btn"> Answer 4</button>
+            </div>
+        </div>
+
+
+        <div class ="buttons">
+            <button id="start-butn" class="start-butn btn">Start</button>
+            <button id="next-butn" class="next-butn btn">Next</button>
+
+
+
+        </div>
+    </div>
+
+
+
+    <script src="script.js"></script>
 </body>
 </html>
