made adjustments to html, added start button in css

--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <title>NBA Quiz</title>
 </head>
 <body>
+    <div class="start-btn"><button>Start NBA Quiz</button></div>
+
+
+
     <div class="container">
         <div id="quiz-container" class="hide">
-            <div id="question">Question</div>
+            <div id="question">Question:</div>
             <div id="answer-buttons" class="btn-grid">
                 <button class="btn"> Answer 1</button>
                 <button class="btn"> Answer 2</button>
@@ -21,8 +25,10 @@
 
 
         <div class ="buttons">
-            <button id="start-butn" class="start-butn btn">Start</button>
-            <button id="next-butn" class="next-butn btn">Next</button>
+            <!-- <button id="start-btn" class="start-btn btn">Start</button> -->
+            <button id="next-btn" class="next-btn btn">Next</button>
+            <button id="quit-btn" class="quit-btn btn">Leave Quiz</button>
+            
 
 
 
