--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
         <button id="start-btn">Start NBA Quiz</button>
     </div>
 
-    <div class="header-box">
+    <div class="header-container">
         <header>
             <div class="title">Damez NBA Fandom Quiz</div>
+            <div class="total-questions">
+                <span class="number-of-questions"> 1 of 8 Questions </span>
+            </div>
             <div class="timer">
-                <div class="time-text">Time Remaining</div>
+                <div class="time-text">Time Remaining:</div>
                 <div class="timer-sec">10</div>
             </div>
         </header>
