added ids to ques.js, coppied ques.js to js for me to see array easier, edited css and hmtl, added reults container, reset button and score.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <span class="number-of-questions"> 1 of 8 Questions </span>
             </div>
             <div class="timer">
-                <div class="time-text">Time Remaining:</div>
-                <div class="timer-sec">10</div>
+                <div class="time-text">Time Remaining</div>
+                <div class="timer-sec">: 10s</div>
             </div>
         </header>
 
@@ -45,6 +45,13 @@
             <button id="quit-btn" class="quit-btn btn">Leave Quiz</button>
             <button id="next-btn" class="next-btn btn">Next</button>
         </div>
+
+        <div class="results-container hide">
+            <div class="You Have Completed The NBA Fandom Quiz!!!"></div>
+            <div id="results">Your Score</div>
+            <button id="restart">Play Again</button>
+        </div>
+
     </div>
 
 
