js is nearly done, but i cant figure out how to get my questions and number of responses to end up on the page.

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
             </div>
             <div class="timer">
                 <div class="time-text">Time Remaining</div>
-                <div class="timer-sec">: 10s</div>
+                <div class="timer-sec">: 15s</div>
             </div>
         </header>
 
     </div>
 
     <div class="container hide">
-        <div id="quiz-container">
+        <div id="question-container">
             <div id="question">Question:</div>
             <div id="answer-buttons" class="btn-grid">
                 <button class="btn"> Answer 1</button>
